LootBeam 1.21适配